Fix spacing with episode title

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -21,7 +21,7 @@ h2.ep-title {
 }
 
 h4.ep-title {
-  margin-top: auto;
+  margin-top: 3vh;
 }
 
 h5.ep-description {
